--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -79,6 +79,12 @@ body:has(.contact:target) .contact-link {
   padding: 5px 15px;
 }
 
+.list-bar li:hover{
+  border-bottom: 3px solid var(--primry-color);
+  padding-bottom: 5px;
+  transition: all 0s;
+}
+
 .nav-bar i {
   font-size: 25px;
   font-weight: 900;
@@ -95,19 +101,16 @@ body:has(.contact:target) .contact-link {
 .section1 {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100%;
   margin: 95px 102px 0px;
+  padding: 2.5rem 0.3125rem;
 }
 
 .enjoy {
-
   flex-wrap: wrap;
   display: flex;
-  align-items: center;
-  justify-content: start;
-  text-align: start;
-  width: 50%;
+  width: 40%;
 }
 
 .enjoy h2 {
@@ -115,25 +118,88 @@ body:has(.contact:target) .contact-link {
   color: #37373F;
   font-size: 4.0625rem;
   font-weight: 700;
-  width: 100%;
 }
 
 .enjoy p {
   font-family: var(--font-defult);
   color: #4F4F5A;
-  font-size: 1rem;
+  font-size: 16px;
   margin: 20px 0px;
   font-weight: 400;
 }
 
+
+.btn-section1 {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: space-between;
+  justify-content: space-between;
+}
+
+.play-icon {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: space-between;
+  justify-content: space-between;
+}
 .food-plate {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: end;
+  filter:  drop-shadow(4px 4px 9px #000a);
+  width: 60%;
 }
+
 
 .food-plate img {
-  filter:  drop-shadow(4px 4px 9px #000a);
-  width: 80%;
+  width: 70%;
 }
 
+.food-plate img:hover {
+  animation: shake 1s infinite;
+}
+
+@keyframes shake {
+  0% {
+    transition: translate(1px, 1px) rotate(0deg);
+  }
+
+  10% {
+    translate: translate(-1px, -2px) rotate(-1deg);
+  }
+
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
