--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,8 +5,13 @@
   --font--secndory: "Inter", sans-serif;
   --primry-color: hsl(0deg 83.93% 43.92%);
   --white-color: #FFFFFF;
+  --light-hue: 0;
+  --light-saturation: 0%;
+  --light-lightness: 100%;
+  --color-light: hsl(var(--light-hue), var(--light-saturation), var(--light-lightness));
   --animation-duration: 400ms;
   --inline-gap: 0.9375rem;
+  --gap: 1.875rem;
 }
 
 /*End Root*/
@@ -28,7 +33,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 25px 100px;
+  padding: 25px 210px;
   background-color: var(--white-color);
   box-shadow: 0 1px 15px rgba(1 1 1 / 10%);
   text-transform: capitalize;
@@ -57,9 +62,34 @@
   color: #7f7f90;
   font-size: 1rem;
   font-weight: 600;
+  gap:   var(--inline-gap);
+  gap: var(--gap);
+  position: relative;
 }
 
-.nav-bar .list-bar {
+/*
+.list-bar a::before {
+  content: "";
+  position: absolute;
+  bottom: -3px;
+  left: var(--inline-gap);
+  width: 0px;
+  height: 2px;
+  background-color: var(--color-primary);
+  transition: width var(--animation-duration);
+}
+*/
+
+.list-bar a:hover {
+  border-bottom: 3px solid var(--primry-color);
+  padding-bottom: 5px;
+  color: #212529;
+  width: 100%;
+  transition: border-bottom 0.5s;
+  }
+
+
+  .nav-bar .list-bar {
   list-style: none;
   display: flex;
 }
@@ -68,12 +98,6 @@
   padding: 5px 15px;
 }
 
-.list-bar a:hover {
-  border-bottom: 3px solid var(--primry-color);
-  padding-bottom: 5px;
-  color: #212529;
-  transition: color 0.5s;
-}
 
 /*@keyframes bl7 {
   0% {
@@ -139,7 +163,7 @@ body:has(.contact:target) .contact-link {
 .enjoy {
   flex-wrap: wrap;
   display: flex;
-  width: 40%;
+  width: 35%;
 }
 
 .enjoy h2 {
@@ -163,12 +187,12 @@ body:has(.contact:target) .contact-link {
   align-items: center;
   justify-content: end;
   filter: drop-shadow(4px 4px 9px #000a);
-  width: 60%;
+  width: 35%;
 }
 
 
 .food-plate img {
-  width: 70%;
+  width: 100%;
 }
 
 .food-plate img:hover {
@@ -272,8 +296,8 @@ body:has(.contact:target) .contact-link {
 
 /*Start Section Chefs*/
 .container {
-  flex-direction: column;
-  margin: 50px 100px;
+  text-align: center;
+  margin: 50px 190px;
   padding: 40px 5px;
 }
 
@@ -305,23 +329,42 @@ body:has(.contact:target) .contact-link {
 .section2 {
   display: flex;
   gap: 30px;
+  flex-wrap: wrap;
+  padding-block: 1.25rem;
 }
 
 .card {
-  background-color: #212529;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  border-radius: 50px;
+  border-radius: 10px;
+  transition: scale var(--animation-duration);
+  background-color: var(--color-light);
+  box-shadow: 3px 3px 15px 0px rgba(0, 0, 0, 0.1);
+  width: calc(calc(100% - var(--gap) * 2) / 3);
+  overflow: hidden;
+  position: relative;
 }
 
+.card picture {
+  width: 100%;
+}
 
 .card img {
-  display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
+}
+
+.section2 .card::before {
+  content: "";
+  position: absolute;
+  background-image: url(../images/wave.svg);
+  background-repeat: repeat-x;
+  width: 100%;
+  height: 50px;
+  bottom: 176px;
 }
 
 .card-content {
